spl/tests/compile_fail/typo_freeze_authority.stderr
error: `freeze_authority = nonexistent` — no field `nonexistent` in this accounts struct
  --> tests/compile_fail/typo_freeze_authority.rs:12:67
   |
12 |     #[account(mut, mint(authority = authority, freeze_authority = nonexistent))]
   |                                                                   ^^^^^^^^^^^

warning: unused import: `quasar_spl::accounts::mint`
 --> tests/compile_fail/typo_freeze_authority.rs:3:5
  |
3 | use quasar_spl::accounts::mint;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
